Correct spacing issues.

--- a/client/app/css/schema-navigator-window.css
+++ b/client/app/css/schema-navigator-window.css
@@ -10,10 +10,13 @@ opacity: 1.0; z-index: 1;}
 
 
 .classSchemaViewModelNavigatorMenuLevel {
-margin: 2px;
+margin-top: 10px;
+margin-bottom: 0px;
+margin-left: 0px;
+margin-right: 0px;
 font-family: Arial;
 -moz-border-radius: 4px; border-radius: 4px;
-box-shadow: 1px 1px 5px #000033;
+box-shadow: 1px 1px 3px #007777;
 }
 
 .classNavigatorPathWindow {
